assets/sass/custom.scss
/* typography */
.container {
  color:#111;
}

.row {
  // overflow: scroll;
}

p.bigger {
  font-size: 1.79em;
  font-weight: 500;
}


.footer {
  font-weight: bold !important;
}

footer {
  text-transform: uppercase;
  font-size: 0.93em;
  img {
    margin-top: -5px;
  }
  .container, a {
    color: #95A8B2;
  }
  .row>div {
    padding-top: 10px;
    margin-bottom: 1em;
  }
}

/* other */

.navbar {
  &.navbar-transparent {
    color:black;
  }
  background: rgba(255,255,255,0.92);
}

.sidebar-collapse .navbar .navbar-toggler-bar {
  background: #999;
}


.page-header {
  // height: 88vh;
}

.section {
  // padding-left: 20px;
  // padding-right: 20px;
}

.section-text {
  h2 {
    margin-bottom: 1em;
  }
  margin-top: 10em;
  .row {
    margin-bottom: 4em;
  }
}

.section-about-us {
  height: 75vh;
  // max-height: 500px;
  margin-top: 30px;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  h1 {
    // font-size: 9.6em;
    font-size: 11vw;
  }
  h4 {
      // font-size: 2.85em;
      font-size: 3.3vw;
      color: black;
      font-weight: normal;
  }
}

@media (max-width: 767px) {
  .section-about-us {
    h1 {
      // font-size: 3.4em;
      font-size: 13vw;
    }
    h4 {
      // font-size: 1.6em;
      font-size: 5.7vw;
    }
  }
  p.bigger {
    font-size: 1.6em;
  }
  .section-contact-us {
    h1, a {
      font-size: 2em !important;
    }
  }
}

@media (min-width: 1200px) {
  // max font-sizes
  .section-about-us {
    h1 {
      font-size: 9.6em;
    }
    h4 {
        font-size: 2.85em;
    }
  }
}

.section-coming-soon {
  min-height: 30vh;
  padding-top: 100px !important;
  padding-bottom: 0;
  // display: flex;
  // flex-flow: column nowrap;
  // justify-content: center;
}

.section-contact-us {
  margin-top: 6em;
  margin-bottom: 6em;
  h1, a {
    font-size: 4.57em;
    font-weight: 600;
    margin-bottom: 0;
  }
}

.gallery {
  padding:0;
}

#highfive {
  text-align: left;
  h2 {
    margin-top: .5em;
    margin-bottom: .5em;
  }
  h2, h4 {
    color:white;
  }
  .mainimage {
    max-width: 600px;
    max-width: 100%;
    position: relative;
  }
  .row:first-of-type {
    padding-top: 25%;
  }
  .row:nth-of-type(2) {
    margin-top: -110px;
  }
  // iframe {
  //   border: none;
  //   position: absolute;
  //   bottom: 64px;
  //   left: 58px;
  //   margin:0;
  //   padding:0;
  //   width: 375px;
  //   height: 664px;
  //   transform: scale(0.505);
  // }
}

#onn {
  overflow: hidden;
  position: relative;
  .row-image {
    // position: absolute;
    overflow: scroll;
    margin-top: -250px;
    // margin-top: -40vw;
    padding-left: 12vw;
    &::-webkit-scrollbar {
      display: none;
    }
    img {
      width:1265px;
    }
  }
  @media (max-width: 767px) {
    .row-image {
      // margin-top: -40vw;
      padding-left: 0;
      margin-left: calc(-300px + 0vw);
      // margin-left: -300px;
      img {
        width:1265px;
      }
    }
  }

  * {
    color: white;
  }
  img {
    max-width: none;
  }

  .container:first-of-type .row {
    padding-top: 150px;
  }
  .row:nth-of-type(2) {
    margin-top: -300px;
    overflow: visible;
  }
  .container:last-of-type .row {
    padding-top: 0px;
    padding-bottom: 140px;
  }
  .content {
    h1 {
      margin-bottom: .1em;
    }
  }
}

#bellhop {
  overflow: hidden;
  .row-image {
    overflow: scroll;
    &::-webkit-scrollbar {
      display: none;
    }
    img {
      width: 1440px;
      max-width: none;
      margin-left: 14%;
    }
  }
  color:black;
  .mainimage {
    margin-left: -32px;
    height:487px;
    max-width: none;
  }
  .row:first-of-type {
    padding-top: 25%;
    padding-bottom: 75px;
  }
  .row:nth-of-type(2) {
    overflow: visible;
  }
  .row:nth-of-type(3) {
    margin-top: 40px;
  }
}

.section-testimonial {
  &+.section-testimonial {
    // padding-top: 0;
  }
  .text {
    // align-self: center;
    color:#666;
    padding: 0;
  }
  img {
    max-width: 15vh;
    margin: 20px;
  }
  h5 {
    // display: block;
    font-weight: 300;
    &.testimonial-text {
      // padding: 20px;
    }
    strong {
      font-weight: 500;
      color:#333;
    }
  }
  .meta {
    // align-self: center;
    * {
      margin-bottom: 0;
    }
  }
}

.section-team {
  h2 {
    margin-top: 10vh;
    margin-bottom: 12vh;
  }
  .team-player {
    margin-bottom: 80px;
    padding: 0 20px;
    p.description {
      text-align: justify;
    }
    img {
      max-width: 150px;
    }
  }
}

#about {
  .intro {
    text-align: center;
    margin-bottom: 10vh;
    h1 {
      font-size: 5em;
      font-weight: bold;
    }
  }
  .avatar {
    width:64px;
    margin-right: 30px;
    margin-bottom: 100px;
  }
  h3, h4, h5, h6 {
    margin:0 0 6px;
  }
  .social-link {
    display: block;
    width: 40px;
    height: 40px;
    padding: 10px;
    margin-bottom: 20px;
    color: #D9D9D9;
    &:first-of-type {
      margin-left: -7px;
    }
    &:hover {
      color: #007bff;
    }
    float: left;
    .fa {
      font-size: 24px;
    }
  }
}

